# image2PPT

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
docs/: 01-scope-and-success.md  02-image-preprocess.md  03-segmentation-and-detection.md  04-vectorization.md  05-scene-graph.md  06-pptx-export.md  07-evaluation.md
examples/: README.md
src/image2pptx/: __init__.py  cli.py  com_exporter.py  config.py  detection.py  mask_postprocess.py  ocr.py  pipeline.py  pptx_writer.py  preprocess.py  sam_segmenter.py  scene_graph.py  vectorize.py
tests/: test_pipeline.py  test_scene_graph.py
